--- a/paginaPrincipal/style.css
+++ b/paginaPrincipal/style.css
@@ -17,6 +17,7 @@ header {
   padding: 20px;
   background: white;
   border-bottom: 1px solid #eee;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 header .logo img {
