--- a/detalleProducto/style.css
+++ b/detalleProducto/style.css
@@ -211,7 +211,7 @@ nav ul li a:hover {
   text-align: center;
   font-size: 28px;
   margin-bottom: 30px;
-  color: #2c3e50;
+  color: #000000;
 }
 
 /* Tarjeta del Producto */
